# stock-filter

./: Cargo.toml  README.md  listing.py  requirements.txt
.github/workflows/: job.yaml
src/: analysis.rs  loader.rs  main.rs  model.rs  strategy.rs  utils.rs
stock-filter/: Cargo.toml
stock-filter/src/: loader.rs  main.rs  model.rs
